feat(completions): update volta

--- a/completions/volta/language/en-US.json
+++ b/completions/volta/language/en-US.json
@@ -4,6 +4,45 @@
       "name": "fetch",
       "tip": [
         "Fetches a tool to the local machine"
+      ],
+      "next": [
+        {
+          "name": "node",
+          "alias": [
+            "node@lts"
+          ],
+          "tip": [
+            "Fetch the LTS version of Node\n",
+            "You can also specify a specific version, such as node@20"
+          ]
+        },
+        {
+          "name": "npm",
+          "tip": [
+            "Fetch the latest version of npm\n",
+            "You can also specify a specific version, such as npm@10"
+          ]
+        },
+        {
+          "name": "pnpm",
+          "tip": [
+            "Fetch the latest version of pnpm\n",
+            "You can also specify a specific version, such as pnpm@10"
+          ]
+        },
+        {
+          "name": "yarn",
+          "tip": [
+            "Fetch the latest version of yarn\n",
+            "You can also specify a specific version, such as yarn@1"
+          ]
+        },
+        {
+          "name": "yarn@1",
+          "tip": [
+            "Fetch the v1 version of yarn"
+          ]
+        }
       ]
     },
     {
@@ -72,6 +111,45 @@
         "Install a tool in your toolchain\n",
         "E: install node@lts\n",
         "   install yarn@1"
+      ],
+      "next": [
+        {
+          "name": "node",
+          "alias": [
+            "node@lts"
+          ],
+          "tip": [
+            "Install the LTS version of Node\n",
+            "You can also specify a specific version, such as node@20"
+          ]
+        },
+        {
+          "name": "npm",
+          "tip": [
+            "Install the latest version of npm\n",
+            "You can also specify a specific version, such as npm@10"
+          ]
+        },
+        {
+          "name": "pnpm",
+          "tip": [
+            "Install the latest version of pnpm\n",
+            "You can also specify a specific version, such as pnpm@10"
+          ]
+        },
+        {
+          "name": "yarn",
+          "tip": [
+            "Install the latest version of yarn\n",
+            "You can also specify a specific version, such as yarn@1"
+          ]
+        },
+        {
+          "name": "yarn@1",
+          "tip": [
+            "Install the v1 version of yarn"
+          ]
+        }
       ]
     },
     {
@@ -80,14 +158,16 @@
         "U: uninstall <node|npm|yarn|...>\n",
         "Uninstall a tool in your toolchain\n",
         "E: uninstall node@lts"
-      ]
+      ],
+      "next": []
     },
     {
       "name": "which",
       "tip": [
         "U: which <node|npm|yarn|...>\n",
         "Locate the actual binary that will be called by Volta"
-      ]
+      ],
+      "next": []
     },
     {
       "name": "run",
