--- a/completions/volta/language/zh-CN.json
+++ b/completions/volta/language/zh-CN.json
@@ -4,6 +4,45 @@
       "name": "fetch",
       "tip": [
         "将工具获取到本地"
+      ],
+      "next": [
+        {
+          "name": "node",
+          "alias": [
+            "node@lts"
+          ],
+          "tip": [
+            "获取 node 的 LTS 版本\n",
+            "你还可以指定一个特定的版本，如 node@20"
+          ]
+        },
+        {
+          "name": "npm",
+          "tip": [
+            "获取 npm 的最新版本\n",
+            "你还可以指定一个特定的版本，如 npm@10"
+          ]
+        },
+        {
+          "name": "pnpm",
+          "tip": [
+            "获取 pnpm 的最新版本\n",
+            "你还可以指定一个特定的版本，如 pnpm@10"
+          ]
+        },
+        {
+          "name": "yarn",
+          "tip": [
+            "获取 yarn 的最新版本\n",
+            "你还可以指定一个特定的版本，如 yarn@1"
+          ]
+        },
+        {
+          "name": "yarn@1",
+          "tip": [
+            "获取 yarn 的 v1 版本"
+          ]
+        }
       ]
     },
     {
@@ -72,6 +111,45 @@
         "在您的工具链中安装一个工具\n",
         "E: install node@lts\n",
         "   install yarn@1"
+      ],
+      "next": [
+        {
+          "name": "node",
+          "alias": [
+            "node@lts"
+          ],
+          "tip": [
+            "安装 node 的 LTS 版本\n",
+            "你还可以指定一个特定的版本，如 node@20"
+          ]
+        },
+        {
+          "name": "npm",
+          "tip": [
+            "安装 npm 的最新版本\n",
+            "你还可以指定一个特定的版本，如 npm@10"
+          ]
+        },
+        {
+          "name": "pnpm",
+          "tip": [
+            "安装 pnpm 的最新版本\n",
+            "你还可以指定一个特定的版本，如 pnpm@10"
+          ]
+        },
+        {
+          "name": "yarn",
+          "tip": [
+            "安装 yarn 的最新版本\n",
+            "你还可以指定一个特定的版本，如 yarn@1"
+          ]
+        },
+        {
+          "name": "yarn@1",
+          "tip": [
+            "安装 yarn 的 v1 版本"
+          ]
+        }
       ]
     },
     {
@@ -80,14 +158,16 @@
         "U: uninstall <node|npm|yarn|...>\n",
         "在您的工具链中卸载一个工具\n",
         "E: uninstall node@lts"
-      ]
+      ],
+      "next": []
     },
     {
       "name": "which",
       "tip": [
         "U: which <node|npm|yarn|...>\n",
         "定位 Volta 将调用的实际二进制文件"
-      ]
+      ],
+      "next": []
     },
     {
       "name": "run",
