feat(completions): update volta

--- a/completions/volta/language/en-US.json
+++ b/completions/volta/language/en-US.json
@@ -149,6 +149,12 @@
           "tip": [
             "Install the v1 version of yarn"
           ]
+        },
+        {
+          "name": "typescript",
+          "tip": [
+            "Install the latest version of TypeScript"
+          ]
         }
       ]
     },
