--- a/completions/volta/language/zh-CN.json
+++ b/completions/volta/language/zh-CN.json
@@ -149,6 +149,12 @@
           "tip": [
             "安装 yarn 的 v1 版本"
           ]
+        },
+        {
+          "name": "typescript",
+          "tip": [
+            "安装 TypeScript 的最新版本"
+          ]
         }
       ]
     },
