feat(completions): update psc

--- a/completions/psc/language/zh-CN.json
+++ b/completions/psc/language/zh-CN.json
@@ -148,7 +148,7 @@
             "读取/设置当前配置语言。\n",
             "配置语言会影响所有添加的补全。\n",
             "通过 psc completion 单独设置了语言的补全不受影响。\n",
-            "更多信息请访问: https://gitee.com/abgox/PSCompletions/blob/main/README-CN.md#关于语言"
+            "更多信息请访问: https://gitee.com/abgox/PSCompletions/blob/main/README.zh-CN.md#关于语言"
           ],
           "next": [
             {
@@ -1344,24 +1344,24 @@
               "tip": [
                 "当前值: {{ $PSCompletions.config.enable_menu_enhance }} (默认值为 1, 表示启用)\n",
                 "设置是否增强补全菜单的功能。\n",
-                "详细信息: https://github.com/abgox/PSCompletions/blob/main/README-CN.md#关于菜单增强\n",
-                "          https://gitee.com/abgox/PSCompletions/blob/main/README-CN.md#关于菜单增强\n"
+                "详细信息: https://github.com/abgox/PSCompletions/blob/main/README.zh-CN.md#关于菜单增强\n",
+                "          https://gitee.com/abgox/PSCompletions/blob/main/README.zh-CN.md#关于菜单增强\n"
               ],
               "next": [
                 {
                   "name": "0",
                   "tip": [
                     "设置为 0。\n",
-                    "详细信息: https://github.com/abgox/PSCompletions/blob/main/README-CN.md#关于菜单增强\n",
-                    "          https://gitee.com/abgox/PSCompletions/blob/main/README-CN.md#关于菜单增强\n"
+                    "详细信息: https://github.com/abgox/PSCompletions/blob/main/README.zh-CN.md#关于菜单增强\n",
+                    "          https://gitee.com/abgox/PSCompletions/blob/main/README.zh-CN.md#关于菜单增强\n"
                   ]
                 },
                 {
                   "name": "1",
                   "tip": [
                     "设置为 1 (默认值)。\n",
-                    "详细信息: https://github.com/abgox/PSCompletions/blob/main/README-CN.md#关于菜单增强\n",
-                    "          https://gitee.com/abgox/PSCompletions/blob/main/README-CN.md#关于菜单增强\n"
+                    "详细信息: https://github.com/abgox/PSCompletions/blob/main/README.zh-CN.md#关于菜单增强\n",
+                    "          https://gitee.com/abgox/PSCompletions/blob/main/README.zh-CN.md#关于菜单增强\n"
                   ]
                 }
               ]
@@ -1518,8 +1518,8 @@
     "desc": [
       "<@Cyan>当前模块版本: <@Magenta>{{ $PSCompletions.version }}<@Cyan>\n",
       "模块版本日志:\n",
-      "  Github: <@Blue>https://github.com/abgox/PSCompletions/blob/main/module/CHANGELOG-CN.md<@Cyan>\n",
-      "  Gitee : <@Blue>https://gitee.com/abgox/PSCompletions/blob/main/module/CHANGELOG-CN.md<@Cyan>\n",
+      "  Github: <@Blue>https://github.com/abgox/PSCompletions/blob/main/module/CHANGELOG.zh-CN.md<@Cyan>\n",
+      "  Gitee : <@Blue>https://gitee.com/abgox/PSCompletions/blob/main/module/CHANGELOG.zh-CN.md<@Cyan>\n",
       "\n",
       "<@Blue>PSCompletions<@Cyan> 命令简单, 只需要输入 <@Magenta>psc<@Cyan> 并按下 <@Magenta>空格<@Cyan> 和 <@Magenta>Tab<@Cyan> 键, 通过补全提示信息，你会快速了解所有命令用法。\n",
       "\n",
