feat(completions): update psc

--- a/completions/psc/language/en-US.json
+++ b/completions/psc/language/en-US.json
@@ -1572,8 +1572,8 @@
         "Please manually update PSCompletions.\nThe following are the commands that may be needed.\n\n",
         "<@Magenta>Update-Module PSCompletions\n\n",
         "Update-PSResource PSCompletions\n\n",
-        "Scoop update abgox.PSCompletions\n\n",
-        "Scoop update pscompletions\n\n"
+        "scoop update abgox.PSCompletions\n\n",
+        "scoop update pscompletions\n\n"
       ],
       "updating": "<@Cyan>Try to run the command: <@Magenta>{{ $update_cmd }}<@Cyan>\nTrying to update PSCompletions module...",
       "restart": "<@Yellow>The change takes effect after restarting PowerShell and reimporting PSCompletions module."
