--- a/completions/psc/language/zh-CN.json
+++ b/completions/psc/language/zh-CN.json
@@ -1584,8 +1584,8 @@
         "请手动更新 PSCompletions，以下是可能需要的命令:\n\n",
         "<@Magenta>Update-Module PSCompletions\n\n",
         "Update-PSResource PSCompletions\n\n",
-        "Scoop update abgox.PSCompletions\n\n",
-        "Scoop update pscompletions\n\n"
+        "scoop update abgox.PSCompletions\n\n",
+        "scoop update pscompletions\n\n"
       ],
       "updating": "<@Cyan>尝试运行命令: <@Magenta>{{ $update_cmd }}<@Cyan>\nPSCompletions 模块正在尝试更新...",
       "restart": "<@Yellow>请重启 PowerShell 并重新导入 PSCompletions 模块来使更改生效"
