feat(completions): update psc

--- a/completions/psc/language/en-US.json
+++ b/completions/psc/language/en-US.json
@@ -1557,9 +1557,7 @@
     },
     "module": {
       "update": [
-        "<@Yellow>Now PSCompletions module can be updated! Update?\n",
-        "(The added completion will be automatically migrated.)\n",
-        "<@Magenta>{{ $PSCompletions.version }}<@Cyan> => <@Magenta>{{ $PSCompletions.config.enable_module_update }}\n<@Cyan>",
+        "<@Yellow>PSCompletions module has new version: <@Magenta>{{ $PSCompletions.version }}<@Yellow> => <@Magenta>{{ $PSCompletions.config.enable_module_update }}<@Cyan>\n",
         "{{ ",
         "$version_list=$PSCompletions.get_raw_content(\"$($PSCompletions.path.temp)\\CHANGELOG.json\") | ConvertFrom-Json;",
         "$lang = if($PSCompletions.language -eq 'zh-CN'){ 'zh-CN' }else{ 'en-US' };",
