feat(completions): update scoop

--- a/completions/scoop/language/en-US.json
+++ b/completions/scoop/language/en-US.json
@@ -903,7 +903,7 @@
           ]
         },
         {
-          "name": "scoop-install-url-replace-from",
+          "name": "abgox-scoop-install-url-replace-from",
           "hide": true,
           "next": [
             {
@@ -912,13 +912,17 @@
           ]
         },
         {
-          "name": "scoop-install-url-replace-to",
+          "name": "abgox-scoop-install-url-replace-to",
           "hide": true,
           "next": [
             {
               "name": "https://gh-proxy.com/github.com"
             }
           ]
+        },
+        {
+          "name": "abgox-scoop-i18n-language",
+          "hide": true
         }
       ]
     },
@@ -1230,12 +1234,12 @@
       "unhold": "Enable updates for app --- {{ $app }}",
       "prefix": [
         "Get the path of app --- {{ $app }}\n",
-        "Path: {{ $path }}"
+        "{{ $path }}"
       ],
       "cache": {
         "rm": [
           "Remove download cache --- {{ $cache }}\n",
-          "Path: {{ $path }}"
+          "{{ $path }}"
         ]
       }
     }
