--- a/completions/scoop/language/zh-CN.json
+++ b/completions/scoop/language/zh-CN.json
@@ -901,7 +901,7 @@
           ]
         },
         {
-          "name": "scoop-install-url-replace-from",
+          "name": "abgox-scoop-install-url-replace-from",
           "hide": true,
           "next": [
             {
@@ -910,13 +910,17 @@
           ]
         },
         {
-          "name": "scoop-install-url-replace-to",
+          "name": "abgox-scoop-install-url-replace-to",
           "hide": true,
           "next": [
             {
               "name": "https://gh-proxy.com/github.com"
             }
           ]
+        },
+        {
+          "name": "abgox-scoop-i18n-language",
+          "hide": true
         }
       ]
     },
@@ -1228,12 +1232,12 @@
       "unhold": "启用应用更新 --- {{ $app }}",
       "prefix": [
         "获取应用的存储路径 --- {{ $app }}\n",
-        "Path: {{ $path }}"
+        "{{ $path }}"
       ],
       "cache": {
         "rm": [
           "移除下载缓存 --- {{ $cache }}\n",
-          "Path: {{ $path }}"
+          "{{ $path }}"
         ]
       }
     }
