feat(completions): update psc

--- a/completions/psc/language/en-US.json
+++ b/completions/psc/language/en-US.json
@@ -1553,6 +1553,10 @@
       ],
       "alias_conflict": [
         "<@Yellow>Alias <@Magenta>{{ $conflict_alias_list -join ' ' }}<@Yellow> already exists, please handle alias conflicts manually."
+      ],
+      "deny_change_menu_line_style": [
+        "<@Red>In Windows PowerShell, due to its rendering issues, the line style of the completion menu cannot be modified.\n",
+        "It is recommended to use PowerShell (pwsh) as it does not have such restrictions."
       ]
     },
     "module": {
