--- a/completions/psc/language/zh-CN.json
+++ b/completions/psc/language/zh-CN.json
@@ -1566,6 +1566,10 @@
       ],
       "alias_conflict": [
         "<@Yellow>别名 <@Magenta>{{ $conflict_alias_list -join ' ' }}<@Yellow> 已经存在，请手动处理别名冲突"
+      ],
+      "deny_change_menu_line_style": [
+        "<@Red>在 Windows PowerShell 中，由于它的渲染问题，不能修改补全菜单的边框线条样式。\n",
+        "建议使用 PowerShell(pwsh)，它没有这样的限制。"
       ]
     },
     "module": {
