feat(completions): update psc

--- a/completions/psc/language/en-US.json
+++ b/completions/psc/language/en-US.json
@@ -1540,22 +1540,11 @@
       "{{ $PSCompletions.info.desc }}"
     ],
     "err": {
-      "download_list": [
-        "<@Red>Failed to get the completions list, please check the network or try again later.\n",
-        "The error url: {{ $PSCompletions._invalid_url }}\n",
-        "If you're sure that your network is working and you're still getting errors, please submit an issue. ( https://github.com/abgox/PSCompletions/issues )"
-      ],
-      "download_file": [
-        "<@Red>File {{ Split-path $download_info.url -leaf }} download failed, please check the network or try again later.\n",
-        "Download url: {{ $download_info.url }}\n",
-        "Save path   : {{ $download_info.file }}\n",
-        "If you are sure that your network is working and you are still getting errors, please submit an issue. ( https://github.com/abgox/PSCompletions/issues )"
-      ],
       "alias_conflict": [
         "<@Yellow>Alias <@Magenta>{{ $conflict_alias_list -join ' ' }}<@Yellow> already exists, please handle alias conflicts manually."
       ],
       "deny_change_menu_line_style": [
-        "<@Red>In Windows PowerShell, due to its rendering issues, the line style of the completion menu cannot be modified.\n",
+        "<@Red>In Windows PowerShell 5.1, due to its rendering issues, the border line style of the completion menu cannot be modified.\n",
         "It is recommended to use PowerShell (pwsh) as it does not have such restrictions."
       ]
     },
