--- a/completions/psc/language/zh-CN.json
+++ b/completions/psc/language/zh-CN.json
@@ -1553,22 +1553,11 @@
       "{{ $PSCompletions.info.desc }}"
     ],
     "err": {
-      "download_list": [
-        "<@Red>获取补全列表失败, 请检查网络连接或稍后再试\n",
-        "获取失败的 url: {{ $PSCompletions._invalid_url }}\n",
-        "如果确定不是网络问题, 请提交 issue ( https://github.com/abgox/PSCompletions/issues )"
-      ],
-      "download_file": [
-        "<@Red>文件 {{ Split-path $download_info.url -leaf }} 下载失败, 请检查网络连接或稍后再试\n",
-        "文件下载地址: {{ $download_info.url }}\n",
-        "文件保存路径: {{ $download_info.file }}\n",
-        "如果确定不是网络问题, 请提交 issue ( https://github.com/abgox/PSCompletions/issues )"
-      ],
       "alias_conflict": [
         "<@Yellow>别名 <@Magenta>{{ $conflict_alias_list -join ' ' }}<@Yellow> 已经存在，请手动处理别名冲突"
       ],
       "deny_change_menu_line_style": [
-        "<@Red>在 Windows PowerShell 中，由于它的渲染问题，不能修改补全菜单的边框线条样式。\n",
+        "<@Red>在 Windows PowerShell 5.1 中，由于它的渲染问题，不能修改补全菜单的边框线条样式。\n",
         "建议使用 PowerShell(pwsh)，它没有这样的限制。"
       ]
     },
