feat(completions): update scoop

--- a/completions/scoop/language/en-US.json
+++ b/completions/scoop/language/en-US.json
@@ -20,7 +20,129 @@
             "E: add extras\n",
             "   add abgo_bucket https://github.com/abgox/abgo_bucket.git"
           ],
-          "next": []
+          "next": [
+            {
+              "name": "abyss",
+              "next": [
+                {
+                  "name": "https://github.com/abgox/abyss"
+                },
+                {
+                  "name": "https://gitee.com/abgox/abyss"
+                }
+              ]
+            },
+            {
+              "name": "main",
+              "next": [
+                {
+                  "name": "https://github.com/ScoopInstaller/Main"
+                },
+                {
+                  "name": "https://gitee.com/scoop-installer-mirrors/Main"
+                }
+              ]
+            },
+            {
+              "name": "extras",
+              "next": [
+                {
+                  "name": "https://github.com/ScoopInstaller/Extras"
+                },
+                {
+                  "name": "https://gitee.com/scoop-installer-mirrors/Extras"
+                }
+              ]
+            },
+            {
+              "name": "versions",
+              "next": [
+                {
+                  "name": "https://github.com/ScoopInstaller/Versions"
+                },
+                {
+                  "name": "https://gitee.com/scoop-installer-mirrors/Versions"
+                }
+              ]
+            },
+            {
+              "name": "nerd-fonts",
+              "next": [
+                {
+                  "name": "https://github.com/matthewjberger/scoop-nerd-fonts"
+                },
+                {
+                  "name": "https://gitee.com/scoop-installer-mirrors/scoop-nerd-fonts"
+                }
+              ]
+            },
+            {
+              "name": "java",
+              "next": [
+                {
+                  "name": "https://github.com/ScoopInstaller/Java"
+                },
+                {
+                  "name": "https://gitee.com/scoop-installer-mirrors/Java"
+                }
+              ]
+            },
+            {
+              "name": "php",
+              "next": [
+                {
+                  "name": "https://github.com/ScoopInstaller/PHP"
+                },
+                {
+                  "name": "https://gitee.com/scoop-installer-mirrors/PHP"
+                }
+              ]
+            },
+            {
+              "name": "nirsoft",
+              "next": [
+                {
+                  "name": "https://github.com/ScoopInstaller/Nirsoft"
+                },
+                {
+                  "name": "https://gitee.com/scoop-installer-mirrors/Nirsoft"
+                }
+              ]
+            },
+            {
+              "name": "sysinternals",
+              "next": [
+                {
+                  "name": "https://github.com/niheaven/scoop-sysinternals"
+                },
+                {
+                  "name": "https://gitee.com/scoop-installer-mirrors/scoop-sysinternals"
+                }
+              ]
+            },
+            {
+              "name": "nonportable",
+              "next": [
+                {
+                  "name": "https://github.com/ScoopInstaller/Nonportable"
+                },
+                {
+                  "name": "https://gitee.com/scoop-installer-mirrors/Nonportable"
+                }
+              ]
+            },
+            {
+              "name": "games",
+              "next": [
+                {
+                  "name": "https://github.com/Calinou/scoop-games"
+                },
+                {
+                  "name": "https://gitee.com/scoop-installer-mirrors/scoop-games"
+                }
+              ]
+            }
+          ]
         },
         {
           "name": "rm",
