feat(completions): update scoop

--- a/completions/scoop/language/en-US.json
+++ b/completions/scoop/language/en-US.json
@@ -25,10 +25,16 @@
               "name": "abyss",
               "next": [
                 {
-                  "name": "https://github.com/abgox/abyss"
+                  "name": "https://github.com/abgox/abyss",
+                  "tip": [
+                    "The official version"
+                  ]
                 },
                 {
-                  "name": "https://gitee.com/abgox/abyss"
+                  "name": "https://gitee.com/abgox/abyss",
+                  "tip": [
+                    "The mirror version"
+                  ]
                 }
               ]
             },
@@ -36,10 +42,16 @@
               "name": "main",
               "next": [
                 {
-                  "name": "https://github.com/ScoopInstaller/Main"
+                  "name": "https://github.com/ScoopInstaller/Main",
+                  "tip": [
+                    "The official version"
+                  ]
                 },
                 {
-                  "name": "https://gitee.com/scoop-installer-mirrors/Main"
+                  "name": "https://gitee.com/scoop-installer-mirrors/Main",
+                  "tip": [
+                    "The mirror version"
+                  ]
                 }
               ]
             },
@@ -47,10 +59,16 @@
               "name": "extras",
               "next": [
                 {
-                  "name": "https://github.com/ScoopInstaller/Extras"
+                  "name": "https://github.com/ScoopInstaller/Extras",
+                  "tip": [
+                    "The official version"
+                  ]
                 },
                 {
-                  "name": "https://gitee.com/scoop-installer-mirrors/Extras"
+                  "name": "https://gitee.com/scoop-installer-mirrors/Extras",
+                  "tip": [
+                    "The mirror version"
+                  ]
                 }
               ]
             },
@@ -58,10 +76,16 @@
               "name": "versions",
               "next": [
                 {
-                  "name": "https://github.com/ScoopInstaller/Versions"
+                  "name": "https://github.com/ScoopInstaller/Versions",
+                  "tip": [
+                    "The official version"
+                  ]
                 },
                 {
-                  "name": "https://gitee.com/scoop-installer-mirrors/Versions"
+                  "name": "https://gitee.com/scoop-installer-mirrors/Versions",
+                  "tip": [
+                    "The mirror version"
+                  ]
                 }
               ]
             },
@@ -69,10 +93,16 @@
               "name": "nerd-fonts",
               "next": [
                 {
-                  "name": "https://github.com/matthewjberger/scoop-nerd-fonts"
+                  "name": "https://github.com/matthewjberger/scoop-nerd-fonts",
+                  "tip": [
+                    "The official version"
+                  ]
                 },
                 {
-                  "name": "https://gitee.com/scoop-installer-mirrors/scoop-nerd-fonts"
+                  "name": "https://gitee.com/scoop-installer-mirrors/scoop-nerd-fonts",
+                  "tip": [
+                    "The mirror version"
+                  ]
                 }
               ]
             },
@@ -80,10 +110,16 @@
               "name": "java",
               "next": [
                 {
-                  "name": "https://github.com/ScoopInstaller/Java"
+                  "name": "https://github.com/ScoopInstaller/Java",
+                  "tip": [
+                    "The official version"
+                  ]
                 },
                 {
-                  "name": "https://gitee.com/scoop-installer-mirrors/Java"
+                  "name": "https://gitee.com/scoop-installer-mirrors/Java",
+                  "tip": [
+                    "The mirror version"
+                  ]
                 }
               ]
             },
@@ -91,10 +127,16 @@
               "name": "php",
               "next": [
                 {
-                  "name": "https://github.com/ScoopInstaller/PHP"
+                  "name": "https://github.com/ScoopInstaller/PHP",
+                  "tip": [
+                    "The official version"
+                  ]
                 },
                 {
-                  "name": "https://gitee.com/scoop-installer-mirrors/PHP"
+                  "name": "https://gitee.com/scoop-installer-mirrors/PHP",
+                  "tip": [
+                    "The mirror version"
+                  ]
                 }
               ]
             },
@@ -102,10 +144,16 @@
               "name": "nirsoft",
               "next": [
                 {
-                  "name": "https://github.com/ScoopInstaller/Nirsoft"
+                  "name": "https://github.com/ScoopInstaller/Nirsoft",
+                  "tip": [
+                    "The official version"
+                  ]
                 },
                 {
-                  "name": "https://gitee.com/scoop-installer-mirrors/Nirsoft"
+                  "name": "https://gitee.com/scoop-installer-mirrors/Nirsoft",
+                  "tip": [
+                    "The mirror version"
+                  ]
                 }
               ]
             },
@@ -113,10 +161,16 @@
               "name": "sysinternals",
               "next": [
                 {
-                  "name": "https://github.com/niheaven/scoop-sysinternals"
+                  "name": "https://github.com/niheaven/scoop-sysinternals",
+                  "tip": [
+                    "The official version"
+                  ]
                 },
                 {
-                  "name": "https://gitee.com/scoop-installer-mirrors/scoop-sysinternals"
+                  "name": "https://gitee.com/scoop-installer-mirrors/scoop-sysinternals",
+                  "tip": [
+                    "The mirror version"
+                  ]
                 }
               ]
             },
@@ -124,10 +178,16 @@
               "name": "nonportable",
               "next": [
                 {
-                  "name": "https://github.com/ScoopInstaller/Nonportable"
+                  "name": "https://github.com/ScoopInstaller/Nonportable",
+                  "tip": [
+                    "The official version"
+                  ]
                 },
                 {
-                  "name": "https://gitee.com/scoop-installer-mirrors/Nonportable"
+                  "name": "https://gitee.com/scoop-installer-mirrors/Nonportable",
+                  "tip": [
+                    "The mirror version"
+                  ]
                 }
               ]
             },
@@ -135,10 +195,16 @@
               "name": "games",
               "next": [
                 {
-                  "name": "https://github.com/Calinou/scoop-games"
+                  "name": "https://github.com/Calinou/scoop-games",
+                  "tip": [
+                    "The official version"
+                  ]
                 },
                 {
-                  "name": "https://gitee.com/scoop-installer-mirrors/scoop-games"
+                  "name": "https://gitee.com/scoop-installer-mirrors/scoop-games",
+                  "tip": [
+                    "The mirror version"
+                  ]
                 }
               ]
             }
@@ -695,7 +761,16 @@
           "hide": true,
           "next": [
             {
-              "name": "https://github.com/ScoopInstaller/Scoop"
+              "name": "https://github.com/ScoopInstaller/Scoop",
+              "tip": [
+                "The official version of Scoop"
+              ]
+            },
+            {
+              "name": "https://gitee.com/scoop-installer-mirrors/Scoop",
+              "tip": [
+                "The mirror version of Scoop"
+              ]
             }
           ]
         },
