feat(completions): update scoop

--- a/completions/scoop/language/en-US.json
+++ b/completions/scoop/language/en-US.json
@@ -592,7 +592,8 @@
         "U: cat <app>\n",
         "Display the content of a specified application's manifest\n",
         "E: cat 7zip"
-      ]
+      ],
+      "next": []
     },
     {
       "name": "checkup",
