--- a/completions/scoop/language/zh-CN.json
+++ b/completions/scoop/language/zh-CN.json
@@ -590,7 +590,8 @@
         "U: cat <app>\n",
         "显示指定应用程序的清单内容\n",
         "E: cat 7zip"
-      ]
+      ],
+      "next": []
     },
     {
       "name": "checkup",
